fix: avoided the double scroll bar on bottom of CodeMirror

--- a/app/javascript/stylesheets/blocks/_codemirror.scss
+++ b/app/javascript/stylesheets/blocks/_codemirror.scss
@@ -1,5 +1,3 @@
-.CodeMirror, .CodeMirror-scroll {
+.CodeMirror {
   height: auto;
-  overflow-y: hidden;
-  overflow-x: auto;
 }
